--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <title>The People's Ceasefire - Los Angeles</title>
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <meta name="viewport" content="width=device-width" />
   <script src="https://kit.fontawesome.com/b0b0fef878.js" crossorigin="anonymous"></script>
